[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.songbloom"
version = "0.0.3"
description = "A template extension for TTS Generation WebUI"
readme = "README.md"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tts-webui.songbloom @ git+https://github.com/rsxdalv/tts-webui.songbloom@main",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.songbloom"

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
